docs(readme): update tips